--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  font-family: 'Roboto Condensed', sans-serif;
+  background-color: #393e46;
+}
+
+h1{
+  color: #aad8d3;
+  margin: 16px;
+
+}
