--- a/src/app/workout/create/create.component.html
+++ b/src/app/workout/create/create.component.html
@@ -1,11 +1,16 @@
-<h2>Create Workout</h2>
-<label for="name">Name</label>
-<input id="name" >
-
-<div *ngFor="let exercise of selectableExercises" class="exercise">
-
-  <span class="name">{{exercise.name}}</span>
-  <span class="selectIcon" (click)="selectExercise(exercise)"><img src="assets/trash.svg" width="25"></span>
+<div class="backContainer" (click)="back()">
+  <img src="assets/back.svg" width="25">
 </div>
 
-<button (click)="addWorkout()">Create</button>
+<h2>Create Workout</h2>
+
+<div class="container">
+  <input id="workoutName" placeholder="Workout Name">
+  <div *ngFor="let exercise of selectableExercises" class="exercise" (click)="selectExercise($event, exercise)">
+    <span class="name">{{exercise.name}}</span>
+    <span class="selectIcon"><img src="assets/circle.svg" width="30"></span>
+  </div>
+  <button (click)="addWorkout()">Create</button>
+</div>
+
+
