--- a/src/app/workout/workoutdetail/workoutdetail.component.css
+++ b/src/app/workout/workoutdetail/workoutdetail.component.css
@@ -1,7 +1,5 @@
 
-
-.workout {
-  cursor: pointer;
+.exercise {
   width: calc(100% - 32px);
   /*-webkit-box-shadow: 0px 10px 13px -7px #000, 5px 5px 15px 5px rgba(0, 0, 0, 0);*/
   /*box-shadow: 0px 10px 13px -7px #000, 5px 5px 15px 5px rgba(0, 0, 0, 0);*/
@@ -13,12 +11,4 @@
   display: flex;
   font-size: 2rem;
   flex-wrap: wrap;
-}
-
-a.workout{
-  text-decoration: none;
-}
-
-.addWorkout{
-  margin-top: 32px;
 }
